# ChangeLog for www-apps/moinmoin
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/moinmoin/ChangeLog,v 1.37 2008/01/25 08:16:45 wrobel Exp $

  25 Jan 2008; Gunnar Wrobel <wrobel@gentoo.org> moinmoin-1.6.0.ebuild:
  Fixed homepage in 1.6.0. (#207218).

*moinmoin-1.6.0 (23 Jan 2008)

  23 Jan 2008; Gunnar Wrobel <wrobel@gentoo.org> +moinmoin-1.6.0.ebuild:
  Added moinmoin-1.6.0 (#206512).

  02 Jun 2007; nixnut <nixnut@gentoo.org> moinmoin-1.5.8.ebuild:
  Stable on ppc wrt bug 177604

  31 May 2007; Christoph Mende <angelos@gentoo.org> moinmoin-1.5.8.ebuild:
  Stable on amd64 wrt security bug 177604

  31 May 2007; Gustavo Zacarias <gustavoz@gentoo.org> moinmoin-1.5.8.ebuild:
  Stable on sparc wrt security #177604

  31 May 2007; Christian Faulhammer <opfer@gentoo.org>
  moinmoin-1.5.8.ebuild:
  stable x86, security bug 177604

*moinmoin-1.5.8 (28 May 2007)

  28 May 2007; Renat Lumpau <rl03@gentoo.org> +moinmoin-1.5.8.ebuild:
  Version bump

  20 May 2007; Christian Faulhammer <opfer@gentoo.org>
  moinmoin-1.5.7.ebuild:
  stable amd64, bug 176342

  13 Feb 2007; Renat Lumpau <rl03@gentoo.org> -moinmoin-1.5.6.ebuild:
  Clean out old version

  12 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org> moinmoin-1.5.7.ebuild:
  Stable on sparc wrt security #166022

  11 Feb 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  moinmoin-1.5.7.ebuild:
  Stable on ppc wrt bug #166022.

  11 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  moinmoin-1.5.7.ebuild:
  stable x86; security bug #166022

*moinmoin-1.5.7 (07 Feb 2007)

  07 Feb 2007; Renat Lumpau <rl03@gentoo.org> -moinmoin-1.3.5-r1.ebuild,
  +moinmoin-1.5.7.ebuild:
  Version bump

  22 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> moinmoin-1.5.6.ebuild:
  Stable on sparc wrt #159855

  12 Jan 2007; nixnut <nixnut@gentoo.org> moinmoin-1.5.6.ebuild:
  Stable on ppc wrt bug 159855

  09 Jan 2007; Andrej Kacian <ticho@gentoo.org> moinmoin-1.5.6.ebuild: