@@ -1,10 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX postinstall-en.txt 808 RMD160 3588cba97e7bd235f140da8bd919f52af26d85e1 SHA1 ca94a45143e3f9be652559580d258cb822dc52af SHA256 43e2ee06036c7582e5b0ad40ffd1b9afd96e6abb90a0e4208c6e53eae243571a
 AUX reconfig-2 421 RMD160 5589dd4a8a87158bf88a99eda91695c7f938599c SHA1 b7d1df9ae27a6fa7ab3b55c53e4f8f382bb47775 SHA256 e885eb6c78df793fe2954a35631f3b611429412e78761bde00587cc14df26657
-DIST moin-1.5.7.tar.gz 4411634 RMD160 f9cd7eb6132a55b5f0097769d8923bf6cd42d1a1 SHA1 46c1f664f4dbb2a9a4aebc99a0c7fe7f3eff8582 SHA256 17d04185f9ade670cb13117f08b6c3e9eb8e3b04f20e4fa929f744c24602203b
 DIST moin-1.5.8.tar.gz 4351630 RMD160 a64374746eb677be11f1942588bda61986ff345e SHA1 fe0e2307cdd4f23b150567a377227bc795fece0f SHA256 569c9b4f7b2cf411718a3ac5e6427c1babacbaf1b085276f822d8d08040e4a8f
-DIST moin-1.6.0.tar.gz 5057079 RMD160 136b6cc781529b1838d1ca7e6873ec49f99178d9 SHA1 c662ca29132bb24f477d9b24bf97b08ea9dd2536 SHA256 f033b8418d4027dfa28a88cfc3ebb7ef7af5d9561672063b816701d19208a929
-EBUILD moinmoin-1.5.7.ebuild 1809 RMD160 a06441f36d1bd4787ae0afb9d0c409300c7a2d62 SHA1 cab3bd80c5499d93a6294c586251d167801fd756 SHA256 4b28213bd61ed827c6a07d3020e6c2a6fdeb294fa3fcd8bf654386be2e4cb19d
+DIST moin-1.6.1.tar.gz 5124404 RMD160 7a10dc035f88eaeaa456f45238209fcf49aabc92 SHA1 086ca44b04540c5c4cd6e4eeec7a7a2cf30c32ad SHA256 1e65b3120cbfad5054e6199dfdbe1d72699088934b45b3a49933140050c9f483
 EBUILD moinmoin-1.5.8.ebuild 1810 RMD160 aed70518b712063e83681c825627959937322d8d SHA1 1987aaa9dc0fc13721a42c9354afe772fc5db057 SHA256 1bf183482e6c6fcb001a985e7f7562e797336198aaae97f2c03d4dcd4398f685
-EBUILD moinmoin-1.6.0.ebuild 1844 RMD160 bbc563a9fca5a18609dae2c1bd659ef6118c9169 SHA1 2178c942271b97b35813dd7be29667d3c43e0d6d SHA256 03528f1ae788a737a7b9b2ce5a3ed1591c5ef7b7bf75b5ebfef04737e935c56f
-MISC ChangeLog 6805 RMD160 8d7892c1ce3d76f44fc68fa1bb4ccfc538b8634f SHA1 4bb4251514ba471f073627ab3d024ad93acebb1e SHA256 5188d9dace050250feffc8af5aba6940309f155231c79081f4eaa4f4e0cb4668
+EBUILD moinmoin-1.6.1.ebuild 1754 RMD160 5106b6304edec380a027d564d0c07db2e5abf454 SHA1 524d07d95566b3fe7768a53e2506a28f3f1c7691 SHA256 29d95db4f24f944e601f6b558164c67f95995283a8db9b97da0161dd15d87ddc
+MISC ChangeLog 7017 RMD160 59e2fd950fa3310518fca13cf409a06a536e81c2 SHA1 2f547c6d5827da0d71755578c094b7c74ef8d387 SHA256 0b219b9aeb28d2468273cec9c2fb7626f21554b10179a2ec01cdd0b2d1dcdcf0
 MISC metadata.xml 225 RMD160 7081530104e84534030353cb15c4a541bb8d5e05 SHA1 af63626385169ab58c44695ebe4df705d455f94b SHA256 0986f8971072c8d055fccbc67cc59ac43eecd1f5592cd9c0ae729b23e550cc96
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.7 (GNU/Linux)
+
+iD8DBQFHtaEcEEcxCpcDQ74RArekAJ0bmPpWXh5YLU/cX/FnkW9J2wN6vgCfXJoe
+Xcn4Nh76OWyFeSUoOnCqfDg=
+=GnrV
+-----END PGP SIGNATURE-----
