@@ -1,6 +1,12 @@
 # ChangeLog for www-apps/moinmoin
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/moinmoin/ChangeLog,v 1.37 2008/01/25 08:16:45 wrobel Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/moinmoin/ChangeLog,v 1.38 2008/02/15 14:26:30 wrobel Exp $
+
+*moinmoin-1.6.1 (15 Feb 2008)
+
+  15 Feb 2008; Gunnar Wrobel <wrobel@gentoo.org> -moinmoin-1.5.7.ebuild,
+  -moinmoin-1.6.0.ebuild, +moinmoin-1.6.1.ebuild:
+  Added moinmoin-1.6.1 in response to sec issue #209133.
 
   25 Jan 2008; Gunnar Wrobel <wrobel@gentoo.org> moinmoin-1.6.0.ebuild:
   Fixed homepage in 1.6.0. (#207218).
